# C_sharp-to-TS-translator

./: .gitignore  MomentoTranslator.pptx  README.md  pyproject.toml  Разработка_регламента_проведения_инспекции.docx
c_sharp_to_ts_translator/: app.py  callbacks.py  main.py
c_sharp_to_ts_translator/AST_builder/: AST_builder.py
c_sharp_to_ts_translator/AST_parser/: AST_parser.py
c_sharp_to_ts_translator/assets/css/: style.css
c_sharp_to_ts_translator/callbacks/: __init__.py  main_page_callbacks.py
c_sharp_to_ts_translator/layouts/: main_layout.py
c_sharp_to_ts_translator/lexical_analyzer/: tokenizer.py
